# best_practices

./: README.md  fixplot.html  paretoplot.html  plotly_data_distribution.html  plotly_gridsearch_heatmap.html  pyproject.toml
practical_code/: Gage_RandR.py  setpoint_suggestion_genopt.py
standard_models/: AdaboostRegression.py  Auto_feat_model.py  DBSCAN_Clustering.py  KMeans.py  Linear Regression.py  Mean_Shift_Cluster.py  Polynom_Regression.py  RFE_RandonForestRegression.py  Random Forest.py  Ridge_Lasso_Regression.py  Training_Transformation.py  feature_importance_collection.py  mlutils.py  training_preprocessing.py
standard_plots/: Plotly_RandomForestRegression_Gridsearch.py  Visualize_DecisionTree.py  controlchart_phasen.py  explainability.py  parallel_coordinate_plot.py  parallel_plot.py  pareto_plot.py  standard_plots.py  tsne_clustering.py
