[tool.poetry]
name = "best_practices"
version = "0.1.0"
description = ""
authors = ["Heiko Kulinna <Heikokulinna@gmx.de>"]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.9"
numpy = "^1.21.4"
pandas = "^1.3.5"
sklearn = "^0.0"
matplotlib = "^3.5.1"
plotly = "^5.4.0"
autofeat = "^2.0.10"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
